...
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="16dp">

        <!-- Login Button -->
        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#80FFFFFF"
            android:text="Login" />

        <!-- Logout Button -->

        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="#80FFFFFF"
            android:text="Log Out" />

...
