...
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Show Hike Details Button -->
    <Button
        android:id="@+id/buttonShowDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:backgroundTint="#BFFFFFFF"
        android:text="Show Hike Details"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:backgroundTint="#BFFF0000"
        android:text="Add Hike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextAddHike" />

    <Button
        android:id="@+id/buttonReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#BFFFFFFF"
        android:text="Review"
        app:layout_constraintEnd_toEndOf="parent"
...
