...
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputAddFriend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/search_button">

        <AutoCompleteTextView
            android:id="@+id/editTextSearchHike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Search for a hike" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
...
